# Algometrix

./: LICENSE  README.md  pyproject.toml
Algometrix/: algometrix.py  classification_models.py  processing_classification.py  processing_regression.py  regression_models.py  test_regression.py  validation_classification.py  validation_regression.py
Algometrix/test/: test_algometrix.py  test_classification_binary.py  test_processing_classification.py  test_processing_regression.py  test_validation_regression.py
src/Algometrix/: algometrix.py  classification_models.py  problem_types.py  processing_classification.py  regression_models.py  validation_classification.py  validation_regression.py
test/: test_classification_models.py  test_problem_types.py
tests/: Example 1 - Binary Classification.ipynb  Example 2 - Multiclass Classification.ipynb  Example 3 - Regression.ipynb  synthetic_binary.csv  test_classification_multiclass.py  test_problem_types.py  test_regression.py  test_validation_classification.py
